# model_parser

./: CMakeLists.txt  model_parser.cc
.github/workflows/: build.c-cpp.yml
cmake/: configure.cmake  core.cmake  third_party.cmake
common/: CMakeLists.txt  buffer.cc  buffer.h  common.h  dtype.cc  dtype.h  global.cc  global.h  memory.cc  memory.h  object.cc  object.h  shared.cc  shared.h  string.cc  string.h  target.cc  target.h  type.cc  type.h
examples/: CMakeLists.txt
examples/paddle/: CMakeLists.txt  framework.proto  main.cc
paddle/: CMakeLists.txt  model_parser.cc  model_parser.h  scope.cc  scope.h  tensor.cc  tensor.h
paddle/cpp/: desc_api.h
paddle/pb/: CMakeLists.txt  block_desc.cc  block_desc.h  op_desc.cc  op_desc.h  program_desc.cc  program_desc.h  var_desc.cc  var_desc.h
support/: type_traits.h  variant.h
